# shaman

./: CMakeLists.txt  README.md  shaman.h
include/: shaman.h
src/: compile.c  read.c  s_get.c  s_program.c  s_set.c  s_utils.c  shaman.c  shaman_internal.h  textops.c
test/: CMakeLists.txt  shaman.h  test1.c  test2.c
test/shaders/: basic.shaman  shader.frag  shader.vert  shader1.frag  shader1.vert  shader2.frag  shader2.vert
